force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Metro2_Account_highest_bal_amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Metro2_Account_highest_bal_amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Highest Outstanding Principal Balance Amount</description>
    <label>Highest Bal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>