force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Metro2_Account_pmt_history_date__c.field-meta.xml
<CustomField>
    <fullName>loan__Metro2_Account_pmt_history_date__c</fullName>
    <description>Date when last Metro2 file was generated.</description>
    <label>Last Reported Metro2 Date</label>
    <type>Date</type>
</CustomField>