force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Metro2_Account_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>loan__Metro2_Account_Status_Code__c</fullName>
    <inlineHelpText>Contains the status code that properly identifies the current condition of the account as of the Date of Account Information</inlineHelpText>
    <label>Account Status Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>