force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Metro2_Account_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>loan__Metro2_Account_Type_Code__c</fullName>
    <inlineHelpText>Report the specific code that identifies the account classification.</inlineHelpText>
    <label>Account Type Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>7B - Agricultural</fullName>
            </value>
            <value>
                <fullName>00 - Auto</fullName>
            </value>
            <value>
                <fullName>3A - Auto Lease</fullName>
            </value>
            <value>
                <fullName>10 - Business Loan</fullName>
            </value>
            <value>
                <fullName>6A - Commercial Installment Loan</fullName>
            </value>
            <value>
                <fullName>0F - Construction Loan</fullName>
            </value>
            <value>
                <fullName>12 - Education</fullName>
            </value>
            <value>
                <fullName>15 - Line of Credit</fullName>
            </value>
            <value>
                <fullName>20 - Note Loan</fullName>
            </value>
            <value>
                <fullName>03 - Partially Secured</fullName>
            </value>
            <value>
                <fullName>29 - Rental Agreement</fullName>
            </value>
            <value>
                <fullName>02 - Secured</fullName>
            </value>
            <value>
                <fullName>01 - Unsecured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>