force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Metro2_CCCD_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Metro2_CCCD_Date__c</fullName>
    <description>Compliance Condition Code reported date</description>
    <label>CCCD Date</label>
    <type>Date</type>
</CustomField>