force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Metro2_CIIC_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Metro2_CIIC_Date__c</fullName>
    <description>Reported date of Consumer Information Indicator Code</description>
    <label>CIIC Date</label>
    <type>Date</type>
</CustomField>