force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Metro2_Compliance_Condition_Code__c.field-meta.xml
<CustomField>
    <fullName>loan__Metro2_Compliance_Condition_Code__c</fullName>
    <defaultValue>&quot;UNDEFINED&quot;</defaultValue>
    <description>Reported Metro2_Compliance_Condition_Code__c.</description>
    <label>Compliance Conditon Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>