force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Metro2_Consumer_Information_Code__c.field-meta.xml
<CustomField>
    <fullName>loan__Metro2_Consumer_Information_Code__c</fullName>
    <defaultValue>&quot;UNDEFINED&quot;</defaultValue>
    <description>Reported Consumer Information Code</description>
    <label>Consumer Information Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>