force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Metro2_Payment_History__c.field-meta.xml
<CustomField>
    <fullName>loan__Metro2_Payment_History__c</fullName>
    <inlineHelpText>Report one month’s payment record in each byte from the left to right in least recent to most recent order.</inlineHelpText>
    <label>Payment History</label>
    <length>180</length>
    <type>Text</type>
</CustomField>