force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Metro2_Payment_Rating__c.field-meta.xml
<CustomField>
    <fullName>loan__Metro2_Payment_Rating__c</fullName>
    <inlineHelpText>The Payment Rating contains a code that properly identifies whether the account is current, past due, in collections or charged off within the activity period being reported.</inlineHelpText>
    <label>Payment Rating</label>
    <length>4</length>
    <type>Text</type>
</CustomField>