force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Metro2_Portfolio_Type__c.field-meta.xml
<CustomField>
    <fullName>loan__Metro2_Portfolio_Type__c</fullName>
    <inlineHelpText>Contains the one-character abbreviation for type of portfolio. Values available:
C = Line of credit 
I = Installment
M = Mortgage
O = Open account
R = Revolving</inlineHelpText>
    <label>Portfolio Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Installment</fullName>
                <default>true</default>
                <label>Installment</label>
            </value>
            <value>
                <fullName>Line of Credit</fullName>
            </value>
            <value>
                <fullName>Mortgage</fullName>
            </value>
            <value>
                <fullName>Open Account</fullName>
            </value>
            <value>
                <fullName>Revolving</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>