force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Metro2_Special_Comment__c.field-meta.xml
<CustomField>
    <fullName>loan__Metro2_Special_Comment__c</fullName>
    <label>Metro2 Special Comment</label>
    <length>4</length>
    <type>Text</type>
</CustomField>