force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Migration_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Migration_Date__c</fullName>
    <label>Migration Date</label>
    <type>Date</type>
</CustomField>