force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Minimum_Advance_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Minimum_Advance_Amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Minimum Advance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>