force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Minimum_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>loan__Minimum_Amount_Due__c</fullName>
    <inlineHelpText>Minimum % of bill amount to be paid by borrower to avoid late fee.</inlineHelpText>
    <label>Minimum Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>