force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Minimum_Draw_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Minimum_Draw_Amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Minimum advance amount which can be drawn by customer, applicable for line of credits.</inlineHelpText>
    <label>Minimum Draw Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>