force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Next_Crb_Payment_Profile_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Next_Crb_Payment_Profile_Date__c</fullName>
    <description>Next Payment Profile Generation date</description>
    <inlineHelpText>Next Payment Profile Generation date</inlineHelpText>
    <label>Next Credit Bureau Payment Profile Date</label>
    <type>Date</type>
</CustomField>