force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Next_Installment_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Next_Installment_Date__c</fullName>
    <description>Date of the next installment</description>
    <inlineHelpText>Date of the Next Due</inlineHelpText>
    <label>Next Due Date</label>
    <type>Date</type>
</CustomField>