force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Next_Interest_Posting_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Next_Interest_Posting_Date__c</fullName>
    <label>Next Interest Posting Date</label>
    <type>Date</type>
</CustomField>