force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Next_Repayment_Amount_As_Of_Today__c.field-meta.xml
<CustomField>
    <fullName>loan__Next_Repayment_Amount_As_Of_Today__c</fullName>
    <defaultValue>0.0</defaultValue>
    <description>Tells the amount due as next repayment for this account as of today</description>
    <inlineHelpText>Tells the amount due as next repayment for this account as of today</inlineHelpText>
    <label>Next Repayment Amount As Of Today</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>