force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Number_of_Days_Overdue__c.field-meta.xml
<CustomField>
    <fullName>loan__Number_of_Days_Overdue__c</fullName>
    <inlineHelpText>Number of days for which there has been an overdue on the loan account.</inlineHelpText>
    <label>Days Past Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>