force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Oldest_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Oldest_Due_Date__c</fullName>
    <description>Oldest Due Date</description>
    <inlineHelpText>Oldest due date on the loan account.</inlineHelpText>
    <label>Oldest Unpaid  Due Date</label>
    <type>Date</type>
</CustomField>