force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Origin_Source__c.field-meta.xml
<CustomField>
    <fullName>loan__Origin_Source__c</fullName>
    <defaultValue>&quot;None&quot;</defaultValue>
    <description>Origin Source of the loan account.</description>
    <label>Origin</label>
    <length>100</length>
    <type>Text</type>
</CustomField>