force-app/main/default/objects/loan__Loan_Account__c/fields/loan__OT_ACH_Debit_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__OT_ACH_Debit_Date__c</fullName>
    <label>OT ACH Debit Date</label>
    <type>Date</type>
</CustomField>