force-app/main/default/objects/loan__Loan_Account__c/fields/loan__OT_ACH_Drawer_City__c.field-meta.xml
<CustomField>
    <fullName>loan__OT_ACH_Drawer_City__c</fullName>
    <description>One time ACH Drawer City</description>
    <inlineHelpText>One time ACH Drawer city</inlineHelpText>
    <label>OT ACH Drawer City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>