force-app/main/default/objects/loan__Loan_Account__c/fields/loan__OT_ACH_Drawer_Name__c.field-meta.xml
<CustomField>
    <fullName>loan__OT_ACH_Drawer_Name__c</fullName>
    <description>One time ACH Drawer Name</description>
    <inlineHelpText>One time ACH drawer name</inlineHelpText>
    <label>OT ACH Drawer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>