force-app/main/default/objects/loan__Loan_Account__c/fields/loan__OT_ACH_Drawer_State__c.field-meta.xml
<CustomField>
    <fullName>loan__OT_ACH_Drawer_State__c</fullName>
    <description>One time ACH Drawer State</description>
    <inlineHelpText>One time ACH Drawer State</inlineHelpText>
    <label>OT ACH Drawer State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>