force-app/main/default/objects/loan__Loan_Account__c/fields/loan__OT_ACH_Drawer_Zip__c.field-meta.xml
<CustomField>
    <fullName>loan__OT_ACH_Drawer_Zip__c</fullName>
    <description>One time ACH Drawer Zip</description>
    <inlineHelpText>One time ACH Drawer Zip</inlineHelpText>
    <label>OT ACH Drawer Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>