force-app/main/default/objects/loan__Loan_Account__c/fields/loan__OT_ACH_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__OT_ACH_Fee_Amount__c</fullName>
    <description>One time ACH fee amount</description>
    <inlineHelpText>One time ACH fee amount</inlineHelpText>
    <label>OT ACH Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>