force-app/main/default/objects/loan__Loan_Account__c/fields/loan__OT_Borrower_ACH__c.field-meta.xml
<CustomField>
    <fullName>loan__OT_Borrower_ACH__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>One time borrower ACH</description>
    <inlineHelpText>One time borrower ACH</inlineHelpText>
    <label>OT Borrower ACH</label>
    <referenceTo>loan__Bank_Account__c</referenceTo>
    <relationshipName>Lending1</relationshipName>
    <type>Lookup</type>
</CustomField>