force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Overdue_Interest__c.field-meta.xml
<CustomField>
    <fullName>loan__Overdue_Interest__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Overdue interest from previous installments</description>
    <inlineHelpText>Overdue interest from previous installments</inlineHelpText>
    <label>Overdue Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>