force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Overdue_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>loan__Overdue_Interest_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Overdue Interest Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>