force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Overdue_Principal__c.field-meta.xml
<CustomField>
    <fullName>loan__Overdue_Principal__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Overdue principal from earlier installments.</description>
    <inlineHelpText>Overdue principal from earlier installments.</inlineHelpText>
    <label>Overdue Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>