force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Pay_Off_Amount_As_Of_Today__c.field-meta.xml
<CustomField>
    <fullName>loan__Pay_Off_Amount_As_Of_Today__c</fullName>
    <defaultValue>0.0</defaultValue>
    <description>Tells the pay off amount for this account as of today</description>
    <inlineHelpText>Tells the pay off amount for this account as of today</inlineHelpText>
    <label>Today&apos;s Payoff</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>