force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Payment_Frequency_Cycle__c.field-meta.xml
<CustomField>
    <fullName>loan__Payment_Frequency_Cycle__c</fullName>
    <label>Payment Frequency Cycle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>