force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>loan__Payment_Mode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the default payment mode for this loan. It will be used to populate the payment mode on the loan payment transaction screen.</inlineHelpText>
    <label>Payment Mode</label>
    <referenceTo>loan__Payment_Mode__c</referenceTo>
    <relationshipLabel>CL Contracts</relationshipLabel>
    <relationshipName>CL_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>