force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Pmt_Amt_Cur__c.field-meta.xml
<CustomField>
    <fullName>loan__Pmt_Amt_Cur__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Current Payment Amount</description>
    <inlineHelpText>This is the current installment amount that needs to be paid.</inlineHelpText>
    <label>Current Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>