force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Previous_Installment_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Previous_Installment_Date__c</fullName>
    <description>Last Billing Date</description>
    <inlineHelpText>Last Bill Date</inlineHelpText>
    <label>Last Due Date</label>
    <type>Date</type>
</CustomField>