force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Principal_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>loan__Principal_Adjustment__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Addition to the Principal or advance made through Principal Adjustment transaction.</inlineHelpText>
    <label>Principal Adjustment - Add</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>