force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Principal_Adjustment_Subtract__c.field-meta.xml
<CustomField>
    <fullName>loan__Principal_Adjustment_Subtract__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Principal Adjustment (negative)</inlineHelpText>
    <label>Principal Adjustment - Sub</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>