force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Principal_Remaining__c.field-meta.xml
<CustomField>
    <fullName>loan__Principal_Remaining__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Principal/Advance Remaining</description>
    <inlineHelpText>Unpaid Principal/advance balance on the loan account.</inlineHelpText>
    <label>Principal/Advance Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>