force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Product_Type__c.field-meta.xml
<CustomField>
    <fullName>loan__Product_Type__c</fullName>
    <description>Type of Product, only LoC and Loans are supported.</description>
    <inlineHelpText>This will be populated from lending product and must not be changed by the user.
This will define the classification of the product.
Possible values are
1) Loan
2) Line of credit
3) Merchant Cash Advance</inlineHelpText>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Loan</fullName>
                <default>true</default>
                <label>Loan</label>
            </value>
            <value>
                <fullName>Line of Credit</fullName>
            </value>
            <value>
                <fullName>Merchant Cash Advance</fullName>
            </value>
            <value>
                <fullName>Amz Based Loan</fullName>
            </value>
            <value>
                <fullName>Flexible Amz Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>