force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Protect_fee_amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Protect_fee_amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Protect Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>