force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Protect_Waiver_type__c.field-meta.xml
<CustomField>
    <fullName>loan__Protect_Waiver_type__c</fullName>
    <label>Protect Waiver Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Principal and Interest</fullName>
                <default>true</default>
                <label>Principal and Interest</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>