force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Rate_Change_Dt_Last__c.field-meta.xml
<CustomField>
    <fullName>loan__Rate_Change_Dt_Last__c</fullName>
    <inlineHelpText>The last date when the interest rate changed on the loan account</inlineHelpText>
    <label>Last Rate Change Date</label>
    <type>Date</type>
</CustomField>