force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Rate_Change_Dt_Next__c.field-meta.xml
<CustomField>
    <fullName>loan__Rate_Change_Dt_Next__c</fullName>
    <inlineHelpText>This contains the date when the interest rate will change for the loan account</inlineHelpText>
    <label>Next Rate Change Date</label>
    <type>Date</type>
</CustomField>