force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Repayment_Billing_Method__c.field-meta.xml
<CustomField>
    <fullName>loan__Repayment_Billing_Method__c</fullName>
    <description>Repayment Billing Method to Line of Credit</description>
    <label>Repayment Billing Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Interest Only</fullName>
            </value>
            <value>
                <fullName>Percentage Of Remaining Balance</fullName>
            </value>
            <value>
                <fullName>Principal Plus Interest</fullName>
            </value>
            <value>
                <fullName>Sliding Billing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>