force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Repayment_Procedure__c.field-meta.xml
<CustomField>
    <fullName>loan__Repayment_Procedure__c</fullName>
    <inlineHelpText>This is the procedure to be followed to create the Installment schedule.</inlineHelpText>
    <label>Repayment Procedure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Equal Monthly Installments</fullName>
                <default>true</default>
                <label>Equal Monthly Installments</label>
            </value>
            <value>
                <fullName>Flexible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>