force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Repayment_Tied_to_Meeting_Schedule__c.field-meta.xml
<CustomField>
    <fullName>loan__Repayment_Tied_to_Meeting_Schedule__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Repayment Tied to Meeting Schedule</label>
    <type>Checkbox</type>
</CustomField>