force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Second_Installment_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Second_Installment_Date__c</fullName>
    <description>Date of the Second installment</description>
    <inlineHelpText>This is the second Payment Date and will be used only for semi monthly Payday loans.</inlineHelpText>
    <label>Second Payment Date</label>
    <type>Date</type>
</CustomField>